--- a/package.json
+++ b/package.json
@@ -10,9 +10,16 @@
     "@types/node": "^16.18.101",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/styled-components": "^5.1.34",
+    "ajv": "^8.17.1",
+    "axios": "^1.7.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.25.0",
     "react-scripts": "5.0.1",
+    "sass": "^1.77.8",
+    "styled-components": "^6.1.11",
+    "tailwindcss": "^3.4.6",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
